--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -12,17 +12,20 @@
       <h1>Midi Hero</h1>
 
       <form action="/api/process" method="POST" enctype="multipart/form-data">
-        <div>
+        <div style="display: inline-block">
           <label class="button secondary" for="file">
             Select a midi file
             <input id="file" name="file" type="file" accept=".mid,.midi" />
           </label>
         </div>
-        <br />
-        <strong id="info" style="display: none"></strong>
-        <br />
         <input class="button" type="submit" />
       </form>
+
+      <br />
+      <div id="info" style="display: none">
+        <strong>Selected file:</strong>
+        <span id="selected-file"></span>
+      </div>
     </main>
     <script src="/static/main.js"></script>
   </body>
