small design changes

--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -18,7 +18,13 @@
             <input id="file" name="file" type="file" accept=".mid,.midi" />
           </label>
         </div>
-        <input class="button" type="submit" />
+        <input
+          id="submit"
+          class="button"
+          type="submit"
+          value="Convert"
+          style="display: none"
+        />
       </form>
 
       <br />
