added open directory

--- a/cmd/web/templates/index.html
+++ b/cmd/web/templates/index.html
@@ -22,7 +22,7 @@
             <h1>MIDI</h1>
             <h1>HERO</h1>
           </div>
-          <div>
+          <div style="text-align: right">
             <h3 style="font-weight: normal">Convert Midi Drum</h3>
             <h3 style="font-weight: normal">Files To Clone Hero</h3>
             <h3 style="font-weight: normal">Expert Drum Charts</h3>
@@ -61,6 +61,10 @@
         <br />
         <span id="selected-files"></span>
       </div>
+
+      <button class="button secondary" onclick="openConverted()">
+        Open converted
+      </button>
     </main>
     <script src="/static/main.js"></script>
   </body>
